[gd_scene load_steps=17 format=2]

[ext_resource path="res://icono_gatito.png" type="Texture" id=1]
[ext_resource path="res://Fuentes/GravityBold8.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fuentes/GravityRegular5.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Art/Free Industrial Zone Tileset/2 Background/Background.png" type="Texture" id=4]
[ext_resource path="res://escenas/Menu/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://Art/Free Industrial Zone Tileset/2 Background/4.png" type="Texture" id=6]
[ext_resource path="res://Art/Free Industrial Zone Tileset/2 Background/1.png" type="Texture" id=7]
[ext_resource path="res://Fuentes/SRAFreePixelFontPack/PixelMiddle.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 2
outline_color = Color( 0.0392157, 0.145098, 0.988235, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 10
outline_size = 1
outline_color = Color( 0.388235, 0.0901961, 0.686275, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 10
outline_size = 1
outline_color = Color( 0.388235, 0.0901961, 0.686275, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 15
outline_size = 1
outline_color = Color( 0.0392157, 0.145098, 0.988235, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=5]

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=7]
size = 23
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 8 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Fondo" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.0
margin_top = -30.0
margin_right = 109.0
margin_bottom = 30.0
custom_constants/separation = 20

[node name="titulo" type="Label" parent="VBoxContainer"]
margin_right = 218.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "El Gatooooo"

[node name="IconoGatito" type="Sprite" parent="VBoxContainer/titulo"]
position = Vector2( 240, 9 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 218.0
margin_bottom = 96.0

[node name="Start" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_right = 218.0
margin_bottom = 16.0
custom_colors/font_color_hover = Color( 0.0941176, 0.360784, 0.415686, 1 )
custom_colors/font_color_pressed = Color( 0.305882, 0.0117647, 0.0117647, 1 )
custom_fonts/font = SubResource( 2 )
text = "Jugar"
flat = true

[node name="Quit" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 218.0
margin_bottom = 36.0
custom_colors/font_color_hover = Color( 0.0941176, 0.360784, 0.415686, 1 )
custom_colors/font_color_pressed = Color( 0.305882, 0.0117647, 0.0117647, 1 )
custom_fonts/font = SubResource( 3 )
text = "Salir"
flat = true

[node name="Credits" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 218.0
margin_bottom = 56.0
custom_colors/font_color_hover = Color( 0.0941176, 0.360784, 0.415686, 1 )
custom_colors/font_color_pressed = Color( 0.305882, 0.0117647, 0.0117647, 1 )
custom_fonts/font = SubResource( 3 )
text = "Creditos"
flat = true

[node name="credits_menu" type="Popup" parent="."]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="credits_menu"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )

[node name="4" type="Sprite" parent="credits_menu/TextureRect"]
position = Vector2( 255, 175 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="credits_menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -61.5
margin_top = 34.0
margin_right = 61.5
margin_bottom = 49.0
custom_fonts/font = SubResource( 4 )
text = "Creditos"
align = 1
valign = 1

[node name="Label2" type="Label" parent="credits_menu"]
margin_left = 198.0
margin_top = 53.0
margin_right = 280.0
margin_bottom = 67.0
theme = SubResource( 5 )
custom_colors/font_color = Color( 0.0352941, 0.0431373, 0.439216, 1 )
custom_fonts/font = SubResource( 6 )
text = "Kids With Guns"

[node name="HBoxContainer" type="HBoxContainer" parent="credits_menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -190.0
margin_right = 128.0
custom_constants/separation = 50

[node name="VBoxContainer2" type="VBoxContainer" parent="credits_menu/HBoxContainer"]
margin_right = 86.0
margin_bottom = 190.0
custom_constants/separation = 16
alignment = 1

[node name="Creadores" type="VBoxContainer" parent="credits_menu/HBoxContainer/VBoxContainer2"]
margin_top = 12.0
margin_right = 86.0
margin_bottom = 87.0

[node name="creadores" type="Label" parent="credits_menu/HBoxContainer/VBoxContainer2/Creadores"]
margin_right = 86.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0.305882, 0.0117647, 0.0117647, 1 )
custom_fonts/font = SubResource( 7 )
text = "Creadores"
align = 1

[node name="nombre1" type="Label" parent="credits_menu/HBoxContainer/VBoxContainer2/Creadores"]
margin_top = 25.0
margin_right = 86.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0.0352941, 0.0431373, 0.439216, 1 )
custom_fonts/font = SubResource( 8 )
text = "Josefina Bustos"
align = 1

[node name="nombre2" type="Label" parent="credits_menu/HBoxContainer/VBoxContainer2/Creadores"]
margin_top = 43.0
margin_right = 86.0
margin_bottom = 57.0
custom_colors/font_color = Color( 0.0352941, 0.0431373, 0.439216, 1 )
custom_fonts/font = SubResource( 8 )
text = "Nelson Caceres"
align = 1

[node name="nombre3" type="Label" parent="credits_menu/HBoxContainer/VBoxContainer2/Creadores"]
margin_top = 61.0
margin_right = 86.0
margin_bottom = 75.0
custom_colors/font_color = Color( 0.0352941, 0.0431373, 0.439216, 1 )
custom_fonts/font = SubResource( 8 )
text = "Paola Lopez"
align = 1

[node name="Arte" type="VBoxContainer" parent="credits_menu/HBoxContainer/VBoxContainer2"]
margin_top = 103.0
margin_right = 86.0
margin_bottom = 178.0

[node name="assets" type="Label" parent="credits_menu/HBoxContainer/VBoxContainer2/Arte"]
margin_right = 86.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0.305882, 0.0117647, 0.0117647, 1 )
custom_fonts/font = SubResource( 7 )
text = "Arte"
align = 1

[node name="nombre4" type="Label" parent="credits_menu/HBoxContainer/VBoxContainer2/Arte"]
margin_top = 25.0
margin_right = 86.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0.0352941, 0.0431373, 0.439216, 1 )
custom_fonts/font = SubResource( 8 )
text = "9E0 "
align = 1

[node name="nombre5" type="Label" parent="credits_menu/HBoxContainer/VBoxContainer2/Arte"]
margin_top = 43.0
margin_right = 86.0
margin_bottom = 57.0
custom_colors/font_color = Color( 0.0352941, 0.0431373, 0.439216, 1 )
custom_fonts/font = SubResource( 8 )
text = "craftpix.net"
align = 1

[node name="nombre6" type="Label" parent="credits_menu/HBoxContainer/VBoxContainer2/Arte"]
margin_top = 61.0
margin_right = 86.0
margin_bottom = 75.0
custom_colors/font_color = Color( 0.0352941, 0.0431373, 0.439216, 1 )
custom_fonts/font = SubResource( 8 )
text = "Julian Llanten"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="credits_menu/HBoxContainer"]
margin_left = 136.0
margin_right = 253.0
margin_bottom = 190.0
alignment = 1

[node name="cuerpo_docente" type="VBoxContainer" parent="credits_menu/HBoxContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 117.0
margin_bottom = 123.0

[node name="assets" type="Label" parent="credits_menu/HBoxContainer/VBoxContainer/cuerpo_docente"]
margin_right = 117.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0.305882, 0.0117647, 0.0117647, 1 )
custom_fonts/font = SubResource( 7 )
text = "Cuerpo Docente"
align = 1

[node name="nombre4" type="Label" parent="credits_menu/HBoxContainer/VBoxContainer/cuerpo_docente"]
margin_top = 25.0
margin_right = 117.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0.0352941, 0.0431373, 0.439216, 1 )
custom_fonts/font = SubResource( 8 )
text = "Elias Zelada"
align = 1

[node name="nombre5" type="Label" parent="credits_menu/HBoxContainer/VBoxContainer/cuerpo_docente"]
margin_top = 43.0
margin_right = 117.0
margin_bottom = 57.0
custom_colors/font_color = Color( 0.0352941, 0.0431373, 0.439216, 1 )
custom_fonts/font = SubResource( 8 )
text = "Christopher Marin"
align = 1

[connection signal="pressed" from="VBoxContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
